--- a/experince.html
+++ b/experince.html
@@ -105,7 +105,10 @@
                 <div class="overlay">
                     <div class="description">
                         <p>
-                            Written using pure JavaScript and the STAND4S Network's quote API, users can do a general search for quotes, get a random quote or can search for quotes from particular authors. Twitter social integration is then included to allow them to tweet it.
+                            Advised on new technologies to help further the organizational mission. 
+                            Instructed owner on building a user-friendly website.
+                            Assessed systemic problems and suggested possible solutions.  
+
                         </p>
 
                         <h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
@@ -113,16 +116,17 @@
                             <li>HTML5</li>
                             <li>CSS3</li>
                             <li>JavaScript</li>
-                            <li>XML</li>
-                            <li>STAND4S Network API</li>
                         </ul>
                     </div>
 
-                    <img src="https://res.cloudinary.com/dj7k0lade/image/upload/v1526688815/codepen/portfolio/quote_machine.jpg" alt="Quote Machine in Action">
-                    <h4 class="heading"><span class="glyphicon glyphicon-hand-up"></span>Quote Machine</h4>
+                    <img src="salonLogo.jpg">
+                    <h4 class="heading"><span class="glyphicon glyphicon-briefcase"></span>Salon Bravonee</h4>
                 </div>
                 <!-- END OF OVERLAY -->
             </section>
+    <!-- END OF SECTION -->
+
+    </section>
     </section>
     <!-- END OF PORTFOLIO -->
     <section id="portfolio">
@@ -140,22 +144,20 @@
                     <!-- DESCRIPTION -->
                     <div class="description">
                         <p>
-                            Collaborated with senior engineers in an agile environment to improve and modernize  space radar systems by implementing Linear Frequency Modulated Pulse waveforms and to improve detection and tracking of both deep space and near-earth objects
+                            Designed and developed an IOS mobile application for college students. Currently working with Florida State University to integrate NutritiNOLE with the official FSU mobile application. 
                         </p>
 
                         <h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
                         <ul class="tools vertical-list">
-                            <li>Java</li>
-                            <li>Python</li>
-                            <li>JUnit</li>
-                            <li>SVN</li>
+                            <li>Swift</li>
+                            <li>PhotoShop</li>
+                            <li>Xcode</li>
                         </ul>
                     </div>
                     <!-- END OF DESCRIPTION -->
 
-                    <img src="harris-logo3.jpg" alt="Editorial Monitoring Automated Excel Screenshot">
-                    <h4 class="heading"><span class="glyphicon glyphicon-briefcase"></span>Harris Corporation</h4>
-                    <h5>May 2017 - Present</h5>
+                    <img src="standAlone.png">
+                    <h4 class="heading">NutritioNOLE</h4>
                 </div>
                 <!-- END OF OVERLAY -->
             </section>
@@ -167,21 +169,21 @@
                     <!-- DESCRIPTION -->
                     <div class="description">
                         <p>
-                            Worked with the Walt Disney World guest experience team to help create a cloud data management interface which allows cast members to create, retrieve, update and delete data from the could.
+                          Collaborated with students to create a native IOS application for FSU’s annual hackathon   
                         </p>
 
                         <h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
                         <ul class="tools vertical-list">
-                            <li>JavaScript</li>
-                            <li>Angular</li>
-                            <li>HTML/CSS</li>
+                            <li>Swift</li>
+                            <li>Firebase</li>
+                            <li>Xcode</li>
                             <li>Git/Github</li>
                         </ul>
                     </div>
                     <!-- END OF DESCRIPTION -->
 
-                    <img src="WaltDisney.png" alt="Disney">
-                    <h4 class="heading"><span class="glyphicon glyphicon-briefcase"></span>The Walt Disney Company</h4>
+                    <img src="hackfsu.jpg">
+                    <h4 class="heading"><span ></span>Hack FSU</h4>
                     <h5>January 2018 - May 2018</h5>
                 </div>
                 <!-- END OF OVERLAY -->
@@ -193,21 +195,20 @@
                 <div class="overlay">
                     <div class="description">
                         <p>
-                            Written using pure JavaScript and the STAND4S Network's quote API, users can do a general search for quotes, get a random quote or can search for quotes from particular authors. Twitter social integration is then included to allow them to tweet it.
+                            Collaborated with Tallahassee local to create an  Android app to help her keep track all of her knitting projects 
                         </p>
 
                         <h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
                         <ul class="tools vertical-list">
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
+                            <li>Java</li>
+                            <li>Android Studio</li>
+                            <li>GitHub</li>
                             <li>XML</li>
-                            <li>STAND4S Network API</li>
                         </ul>
                     </div>
 
-                    <img src="https://res.cloudinary.com/dj7k0lade/image/upload/v1526688815/codepen/portfolio/quote_machine.jpg" alt="Quote Machine in Action">
-                    <h4 class="heading"><span class="glyphicon glyphicon-hand-up"></span>Quote Machine</h4>
+                    <img src="knitLogo.png">
+                    <h4 class="heading"><span class="glyphicon glyphicon-briefcase"></span>Kint-a-Bit!</h4>
                 </div>
                 <!-- END OF OVERLAY -->
             </section>
