fixed experince page

--- a/experince.html
+++ b/experince.html
@@ -156,8 +156,8 @@
                     </div>
                     <!-- END OF DESCRIPTION -->
 
-                    <img src="standAlone.png">
-                    <h4 class="heading">NutritioNOLE</h4>
+                    <img src="NutricioNOLE.png">
+                    <h4 class="heading"><span class="glyphicon glyphicon-briefcase"></span>NutritioNOLE</h4>
                 </div>
                 <!-- END OF OVERLAY -->
             </section>
@@ -183,8 +183,7 @@
                     <!-- END OF DESCRIPTION -->
 
                     <img src="hackfsu.jpg">
-                    <h4 class="heading"><span ></span>Hack FSU</h4>
-                    <h5>January 2018 - May 2018</h5>
+                    <h4 class="heading"><span class="glyphicon glyphicon-briefcase"></span>Hack FSU</h4
                 </div>
                 <!-- END OF OVERLAY -->
             </section>
@@ -214,9 +213,32 @@
             </section>
             <!-- END OF SECTION -->
         
-    </section>
+        <section>
+                <div class="overlay">
+                    <div class="description">
+                        <p>
+                            Created an IOS application to help users keep track of their goals for the year. Make it happen is currently in the process of being tested and will be released on the app this December!
+                        </p>
+
+                        <h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
+                        <ul class="tools vertical-list">
+                            <li>Swift</li>
+                            <li>Xcode</li>
+                            <li>Xcode Unit test</li>
+                            <li>Xcode Unit Targets</li>
+                        </ul>
+                    </div>
+
+                    <img src="make-it-happen.jpg">
+                    <h4 class="heading"><span class="glyphicon glyphicon-briefcase"></span>Make it Happen</h4>
+                </div>
+                <!-- END OF OVERLAY -->
+            </section>
+            <!-- END OF SECTION -->
+        
+
     </div>
-</div> 
+ 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
