added about me page

--- a/experince.html
+++ b/experince.html
@@ -25,7 +25,7 @@
     </li>
       
     <li class = "pull-right">
-      <a href= '#'>About Me</a>
+      <a href= 'aboutme.html'>About Me</a>
     </li>
 
 
@@ -217,7 +217,7 @@
                 <div class="overlay">
                     <div class="description">
                         <p>
-                            Created an IOS application to help users keep track of their goals for the year. Make it happen is currently in the process of being tested and will be released on the app this December!
+                            Created an IOS application to help users keep track of their goals for the year. Make it happen is currently in the process of being tested and will be released on the app store this December!
                         </p>
 
                         <h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
