--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </li>
       
     <li class = "pull-right">
-      <a href= '#'>About Me</a>
+      <a href= 'aboutme.html'>About Me</a>
     </li>
 
 
