--- a/experince/experince.html
+++ b/experince/experince.html
@@ -7,17 +7,17 @@
       <link rel="stylesheet" href="experince.css">
     </header>
     <title>Shannen Bravo Brown</title>
-<div class="pageOne">
+<!--<div class="pageOne">-->
 <div class="container-fluid">
   <ul class="nav nav-pills">
 
 
     <li class = "pull-right">
-      <a href= '#'>Awards</a>
+      <a href= 'contactMe.html'>Contact Me</a>
     </li>  
     
     <li class = "pull-right">
-      <a href= '#'>Skills</a>
+      <a href= '#'>Awards</a>
     </li>
 
     <li class = "pull-right">
