--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 
     <li class = "pull-right">
-      <a href= '#'>Awards</a>
+      <a href= 'contactMe.html'>Contact Me</a>
     </li>  
     
     <li class = "pull-right">
-      <a href= '#'>Skills</a>
+      <a href= '#'>Awards</a>
     </li>
 
     <li class = "pull-right">
